--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,10 @@ machine:
   python:
     version: 3.5.2
 
+dependencies:
+  post:
+    - pip install twine
+
 test:
   override:
     - echo "no tests :)"
@@ -11,3 +15,4 @@ deployment:
     tag: /v[0-9]+(\.[0-9]+)*/
     commands:
       - python setup.py sdist bdist_wheel
+      - twine upload dist/* --username $PYPI_USERNAME --password $PYPI_PASSWORD
