--- a/circle.yml
+++ b/circle.yml
@@ -10,6 +10,6 @@ deployment:
   release:
     tag: /v[0-9]+(\.[0-9]+)*/
     commands:
+      - pip install twine wheel
       - python setup.py sdist bdist_wheel
-      - pip install twine
       - twine upload dist/* --username $PYPI_USERNAME --password $PYPI_PASSWORD
