--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,10 @@ machine:
   python:
     version: 3.5.2
 
+test:
+  override:
+    - python setup.py test
+
 deployment:
   release:
     tag: /v[0-9]+(\.[0-9]+)*/
