--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,10 @@ machine:
   python:
     version: 3.5.2
 
+dependencies:
+  post:
+    - sudo apt-get install -y pandoc
+
 test:
   override:
     - python setup.py test
