--- a/circle.yml
+++ b/circle.yml
@@ -14,4 +14,4 @@ deployment:
   release:
     tag: /v[0-9]+(\.[0-9]+)*/
     commands:
-      - make publish PYPY_REPOSITORY=pypi
+      - make publish
