Makefile tweaks and test deployment

--- a/circle.yml
+++ b/circle.yml
@@ -15,3 +15,7 @@ deployment:
     tag: /v[0-9]+(\.[0-9]+)*/
     commands:
       - make publish
+  testing:
+    branch: develop
+    commands:
+      - make publish TWINE_REPOSITORY=pypitest
