--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,8 @@ test:
   script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
     - docker pull "$CI_REGISTRY_IMAGE:$IMAGE_TAG" || true
-    - docker build --cache-from "$CI_REGISTRY_IMAGE:$IMAGE_TAG" -t "$CI_REGISTRY_IMAGE:$IMAGE_TAG" .
+    - docker pull "$CI_REGISTRY_IMAGE:latest" || true
+    - docker build --cache-from "$CI_REGISTRY_IMAGE:$IMAGE_TAG" --cache-from "$CI_REGISTRY_IMAGE:latest" -t "$CI_REGISTRY_IMAGE:$IMAGE_TAG" .
     - docker push "$CI_REGISTRY_IMAGE"
 
 publish-branch:
@@ -48,6 +49,14 @@ publish-branch:
     - master
     - develop
     - gitlab-migration
+
+publish-latest:
+  stage: publish
+  <<: *publish
+  variables:
+    IMAGE_TAG: latest
+  only:
+    - develop
 
 publish-tag:
   stage: publish
