Specify tags-only for release job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,4 +44,9 @@ workflows:
       - release:
           requires: ["hold"]
           context: pypi-testing
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
 
